--- a/sass/main.css
+++ b/sass/main.css
@@ -22,6 +22,59 @@ body {
   background-size: 10%;
 }
 
+.mobile_nav {
+  width: 100vw;
+  height: 150px;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 10;
+  visibility: hidden;
+  -webkit-transition: all .4s linear;
+  transition: all .4s linear;
+}
+
+.mobile_nav ul {
+  font-family: "ubuntu", sans-serif;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
+}
+
+.mobile_nav ul li {
+  list-style: none;
+  color: white;
+  margin: 20px 10px;
+}
+
+.mobile_nav ul li a {
+  text-decoration: none;
+  border: 1px solid #b6182d;
+  padding: 8px 10px;
+  color: #da2121;
+  border-radius: 5px;
+}
+
+.mobile_nav.active {
+  visibility: visible;
+  background: #36cee9;
+  position: fixed;
+  bottom: 0px;
+}
+
+.mobile_nav.active ul {
+  text-align: center;
+}
+
 .main_header {
   width: 100%;
   height: 100%;
@@ -126,7 +179,7 @@ body {
   width: 100%;
 }
 
-.main_header .child_header #navigation .toggle_btn {
+.main_header .child_header #navigation #toggle_btn {
   display: none;
 }
 
@@ -190,6 +243,7 @@ body {
 
 .main_header .child_header .header_content .header_mini_content h4 {
   font-size: 25px;
+  letter-spacing: 3px;
 }
 
 .main_header .child_header .header_content .header_mini_content p {
@@ -232,7 +286,7 @@ body {
 
 .main_about, .main_project {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -468,7 +522,7 @@ body {
 }
 
 .main_about.main_contact {
-  background: url("https://i.ibb.co/VHdBShT/cerulean-blue-curve-frame-template-53876-99029.jpg") no-repeat center;
+  background: url("../images/contact.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -479,11 +533,55 @@ body {
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
+  place-items: center;
 }
 
 .contact_body .contact_status {
-  width: 50%;
+  width: 80%;
   height: 100%;
+}
+
+.contact_body .contact_status .contact_status_main {
+  width: 100%;
+  height: inherit;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto 0;
+}
+
+.contact_body .contact_status .contact_status_main h2 {
+  font-size: 25px;
+}
+
+.contact_body .contact_status .contact_status_main p {
+  margin: 15px 0;
+}
+
+.contact_body .contact_status .contact_status_main .address_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact_body .contact_status .contact_status_main .address_box .address_icon {
+  margin-right: 20px;
+  font-size: 30px;
+  color: #db2b39;
+}
+
+.contact_body .contact_status .contact_status_main .address_box .address_body h2 {
+  font-size: 20px;
 }
 
 .contact_body .contact_form {
@@ -586,5 +684,506 @@ body {
 
 .main_footer .child_footer p span {
   color: #da2121;
+}
+
+@media (max-width: 1080px) {
+  .main_header .child_header #navigation {
+    padding: 10px 50px;
+  }
+  .main_header .child_header #navigation .logo_div .logo {
+    font-size: 32px;
+  }
+  .main_header .child_header #navigation .menu {
+    width: 50%;
+    height: 100%;
+  }
+  .main_header .child_header .header_content {
+    height: 100%;
+    padding: 0 40px;
+    margin-top: 80px;
+  }
+  .main_header .child_header .header_content .header_mini_content h1 {
+    font-size: 45px;
+  }
+  .main_header .child_header .header_content .header_mini_content h4 {
+    font-size: 20px;
+    letter-spacing: 3px;
+  }
+  .main_header .child_header .header_content .header_mini_content p {
+    font-size: 30px;
+    margin: 10px 0 30px 0;
+  }
+  .main_header .child_header .header_content .header_mini_content p span {
+    font-size: 35px;
+  }
+  .main_header .child_header .header_content .header_mini_content a {
+    font-size: 20px;
+  }
+  .main_header .child_header .header_content .header_mini_content2 {
+    width: 55%;
+    height: inherit;
+    text-align: center;
+  }
+  .main_header .child_header .header_content .header_mini_content2 img {
+    width: 100%;
+    height: inherit;
+  }
+  .main_about .child_about, .main_project .child_about {
+    display: -ms-grid;
+    display: grid;
+    place-items: center;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .main_about .child_about .about_title h2, .main_project .child_about .about_title h2 {
+    font-size: 35px;
+  }
+  .main_about .child_about .about_content .left_content, .main_project .child_about .about_content .left_content {
+    width: 50%;
+    height: 100%;
+    display: -ms-grid;
+    display: grid;
+    place-items: center;
+  }
+  .main_about .child_about .about_content .left_content figure, .main_project .child_about .about_content .left_content figure {
+    width: 90%;
+    height: 90%;
+  }
+  .main_about .child_about .about_content .left_content figure img, .main_project .child_about .about_content .left_content figure img {
+    width: 90%;
+    height: 90%;
+  }
+  .main_about .child_about .about_content .main_project .Project_conents, .main_project .child_about .about_content .main_project .Project_conents {
+    height: 100%;
+    padding: 50px 0px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 100px;
+  }
+  .main_about .child_about .about_content .main_project .Project_conents .project_content, .main_project .child_about .about_content .main_project .Project_conents .project_content {
+    height: 600px;
+    background-color: red;
+  }
+  .main_about .child_about .about_content .main_project .Project_conents .project_content .Project_img, .main_project .child_about .about_content .main_project .Project_conents .project_content .Project_img {
+    width: 80%;
+    height: 400px;
+    border-radius: 5px;
+  }
+  .main_about .child_about .about_content .main_project .Project_conents .project_content .project_body, .main_project .child_about .about_content .main_project .Project_conents .project_content .project_body {
+    margin-top: 10px;
+  }
+  .main_about .child_about .about_content .main_project .Project_conents .project_content .project_body h2, .main_project .child_about .about_content .main_project .Project_conents .project_content .project_body h2 {
+    color: red;
+    font-size: 14px;
+  }
+  .main_about .child_about .about_content .main_project .Project_conents .project_content .project_body span, .main_project .child_about .about_content .main_project .Project_conents .project_content .project_body span {
+    margin: 5px 0;
+    display: block;
+    font-size: 10px;
+    color: gray;
+    font-family: "ubuntu", sans-serif;
+  }
+  .main_about .child_about .about_content .main_project .Project_conents .project_content .project_body p, .main_project .child_about .about_content .main_project .Project_conents .project_content .project_body p {
+    font-family: "ubuntu", sans-serif;
+    line-height: 20px;
+  }
+}
+
+@media (max-width: 912px) {
+  .main_header .child_header #navigation .logo_div .logo {
+    font-size: 30px;
+  }
+  .main_header .child_header #navigation .menu {
+    width: 50%;
+    height: 100%;
+    -webkit-transition: all .4s linear;
+    transition: all .4s linear;
+  }
+  .main_header .child_header #navigation .menu ul {
+    display: none;
+  }
+  .main_header .child_header #navigation .menu ul li a::after {
+    display: none;
+  }
+  .main_header .child_header #navigation .menu ul li a:hover {
+    color: #d61919;
+  }
+  .main_header .child_header #navigation #toggle_btn {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    -webkit-box-shadow: 4px 4px 28px -6px rgba(0, 0, 0, 0.58);
+            box-shadow: 4px 4px 28px -6px rgba(0, 0, 0, 0.58);
+    border-radius: 5px;
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  .main_header .child_header #navigation #toggle_btn .first_toggle {
+    width: 35px;
+    height: 4px;
+    background: #0099ff;
+    display: block;
+    border-radius: 5px;
+    -webkit-transition: all .4s linear;
+    transition: all .4s linear;
+  }
+  .main_header .child_header #navigation #toggle_btn .third_toggle {
+    width: 25px;
+    height: 4px;
+    background: #0099ff;
+    display: block;
+    border-radius: 5px;
+    -webkit-transition: all .4s linear;
+    transition: all .4s linear;
+  }
+  .main_header .child_header #navigation #toggle_btn .second_toggle {
+    width: 15px;
+    height: 4px;
+    background: #0099ff;
+    display: block;
+    border-radius: 5px;
+    margin: 3px 0;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+  }
+  .main_header .child_header #navigation #toggle_btn.active .second_toggle {
+    margin-left: 70px;
+  }
+  .main_header .child_header #navigation #toggle_btn.active .first_toggle {
+    background-color: #da2121;
+    -webkit-transform: translateY(9px) rotate(45deg);
+            transform: translateY(9px) rotate(45deg);
+  }
+  .main_header .child_header #navigation #toggle_btn.active .third_toggle {
+    width: 33px;
+    background-color: #da2121;
+    -webkit-transform: translateY(-5px) rotate(-50deg);
+            transform: translateY(-5px) rotate(-50deg);
+  }
+  .main_header .child_header #navigation.active {
+    background: #e71c3e;
+    height: 70px;
+    position: fixed;
+    top: 0;
+  }
+  .main_header .child_header .header_content {
+    height: 100%;
+    padding: 0 40px;
+    margin-top: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main_header .child_header .header_content .header_mini_content {
+    width: 100%;
+  }
+  .main_header .child_header .header_content .header_mini_content h1 {
+    font-size: 45px;
+  }
+  .main_header .child_header .header_content .header_mini_content h4 {
+    font-size: 20px;
+    letter-spacing: 3px;
+  }
+  .main_header .child_header .header_content .header_mini_content p {
+    font-size: 30px;
+    margin: 10px 0 30px 0;
+  }
+  .main_header .child_header .header_content .header_mini_content p span {
+    font-size: 35px;
+  }
+  .main_header .child_header .header_content .header_mini_content a {
+    font-size: 20px;
+  }
+  .main_header .child_header .header_content .header_mini_content2 {
+    display: none;
+  }
+  .main_about .child_about, .main_project .child_about {
+    display: -ms-grid;
+    display: grid;
+    place-items: center;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .main_about .child_about .about_title h2, .main_project .child_about .about_title h2 {
+    font-size: 35px;
+  }
+  .main_about .child_about .about_content, .main_project .child_about .about_content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main_about .child_about .about_content .left_content, .main_project .child_about .about_content .left_content {
+    width: 80%;
+    height: 100%;
+    display: -ms-grid;
+    display: grid;
+    place-items: center;
+  }
+  .main_about .child_about .about_content .left_content figure, .main_project .child_about .about_content .left_content figure {
+    width: 80%;
+    height: 90%;
+  }
+  .main_about .child_about .about_content .left_content figure img, .main_project .child_about .about_content .left_content figure img {
+    width: 90%;
+    height: 90%;
+  }
+  .main_about .child_about .about_content .right_content, .main_project .child_about .about_content .right_content {
+    width: 80%;
+  }
+  .main_about .child_about .about_content .right_content h2, .main_project .child_about .about_content .right_content h2 {
+    font-size: 25px;
+    line-height: 40px;
+  }
+  .main_about .child_about .about_content .right_content h2 span, .main_project .child_about .about_content .right_content h2 span {
+    color: #da2121;
+    font-size: 30px;
+    letter-spacing: 1px;
+  }
+  .main_about .child_about .about_content .right_content p, .main_project .child_about .about_content .right_content p {
+    margin-top: 20px;
+    line-height: 30px;
+  }
+  .main_about .child_about .about_content .right_content button, .main_project .child_about .about_content .right_content button {
+    padding: 10px 15px;
+    border: 2px solid #da2121;
+    background: #da2121;
+    border-radius: 5px;
+    margin-top: 20px;
+    -webkit-transition: all .4s linear;
+    transition: all .4s linear;
+  }
+  .main_about .child_about .about_content .right_content button a, .main_project .child_about .about_content .right_content button a {
+    text-decoration: none;
+    color: #fff;
+    font-family: "ubuntu", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .main_about .child_about .about_content .right_content button a:hover, .main_project .child_about .about_content .right_content button a:hover {
+    color: #da2121;
+  }
+  .main_about .child_about .about_content .right_content button:hover, .main_project .child_about .about_content .right_content button:hover {
+    background: white;
+    color: #df1d37;
+  }
+  .main_project {
+    margin: 100px 0;
+    height: 100vh;
+    margin-bottom: 90em;
+  }
+  .main_project .Project_conents {
+    height: 100vh;
+    padding: 50px 0px;
+    grid-gap: 20px;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin-bottom: 100px;
+    text-align: center;
+  }
+  .main_project .Project_conents .project_content {
+    height: 600px;
+  }
+  .main_project .Project_conents .project_content .Project_img {
+    width: 80%;
+    height: 400px;
+    border-radius: 5px;
+  }
+  .main_project .Project_conents .project_content .project_body {
+    margin-top: 10px;
+  }
+  .main_project .Project_conents .project_content .project_body h2 {
+    color: red;
+    font-size: 14px;
+  }
+  .main_project .Project_conents .project_content .project_body span {
+    margin: 5px 0;
+    display: block;
+    font-size: 10px;
+    color: gray;
+    font-family: "ubuntu", sans-serif;
+  }
+  .main_project .Project_conents .project_content .project_body p {
+    font-family: "ubuntu", sans-serif;
+    line-height: 20px;
+  }
+  .main_about.main_contact {
+    background: white;
+  }
+  .contact_body {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact_body .contact_status {
+    width: 80%;
+    height: 100%;
+    margin-top: 20px;
+  }
+  .contact_body .contact_status .contact_status_main {
+    width: 100%;
+    height: inherit;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: auto 0;
+  }
+  .contact_body .contact_status .contact_status_main h2 {
+    font-size: 25px;
+  }
+  .contact_body .contact_status .contact_status_main p {
+    margin: 15px 0;
+  }
+  .contact_body .contact_status .contact_status_main .address_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact_body .contact_status .contact_status_main .address_box .address_icon {
+    margin-right: 20px;
+    font-size: 30px;
+    color: #db2b39;
+  }
+  .contact_body .contact_status .contact_status_main .address_box .address_body h2 {
+    font-size: 20px;
+  }
+  .contact_body .contact_form {
+    width: 50%;
+    height: 100%;
+    display: -ms-grid;
+    display: grid;
+    place-items: center;
+    text-align: center;
+  }
+  .contact_body .contact_form form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin-top: 50px;
+  }
+  .contact_body .contact_form form .form_title {
+    font-size: 25px;
+    margin-bottom: 15px;
+  }
+  .contact_body .contact_form form label {
+    margin-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact_body .contact_form form label span {
+    font-size: 20px;
+  }
+  .contact_body .contact_form form label input {
+    display: block;
+    margin-top: 10px;
+    padding: 8px 15px;
+    border-radius: 5px;
+    font-size: 14px;
+    width: 250px;
+  }
+  .contact_body .contact_form form label textarea {
+    display: block;
+    margin-top: 10px;
+    width: 250px;
+    height: 150px;
+    border-radius: 5px;
+    padding: 8px 15px;
+    resize: none;
+  }
+  .contact_body .contact_form form button {
+    padding: 10px 15px;
+    background: #d61919;
+    border: 2px solid #da2121;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 500;
+    font-family: "ubuntu", sans-serif;
+    border-radius: 5px;
+    -webkit-transition: all .4s linear;
+    transition: all .4s linear;
+  }
+  .contact_body .contact_form form button:hover {
+    color: #da2121;
+    background: #fff;
+  }
+  .main_footer {
+    width: 100%;
+    height: auto;
+    margin-top: 400px;
+  }
+  .main_footer .child_footer {
+    background: black;
+    padding: 20px 0px;
+    text-align: center;
+  }
+  .main_footer .child_footer p {
+    font-family: "ubuntu", sans-serif;
+    color: #fff;
+    font-size: 20px;
+  }
+  .main_footer .child_footer p span {
+    color: #da2121;
+  }
 }
 /*# sourceMappingURL=main.css.map */
