--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,6 +29,52 @@ $ubuntu : 'ubuntu', sans-serif;
     background-size: 10%;
 }
 
+// mobile nav =--------------------------------------> 
+
+.mobile_nav{
+    width: 100vw;
+    height: 150px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    visibility: hidden;
+    transition: all .4s linear;
+
+    ul{
+        font-family: $ubuntu;
+        display: grid;
+        grid-template-columns: repeat(3 , 1fr);
+        padding: 20px;
+
+        li{
+            list-style: none;
+            color: white;
+            margin: 20px 10px;
+
+            a{
+                text-decoration: none;
+                border: 1px solid rgb(182, 24, 45);
+                padding: 8px 10px;
+                color: rgb(218, 33, 33);
+                border-radius: 5px;
+            }
+        }
+    }
+
+    &.active{
+        visibility: visible;
+        background: rgb(54, 206, 233);
+        position: fixed;
+        bottom: 0px;
+        
+        ul{
+            text-align: center;
+        }
+    }
+}
+
 // main css ---------------------------------->
 
 .main_header{
@@ -113,7 +159,7 @@ $ubuntu : 'ubuntu', sans-serif;
                 }
             }
 
-            .toggle_btn{
+            #toggle_btn{
                 display: none;
             }
 
@@ -175,6 +221,7 @@ $ubuntu : 'ubuntu', sans-serif;
 
                 h4{
                     font-size: 25px;
+                    letter-spacing: 3px;
                 }
 
                 p{
@@ -225,7 +272,7 @@ $ubuntu : 'ubuntu', sans-serif;
 
 .main_about,.main_project{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -429,7 +476,7 @@ $ubuntu : 'ubuntu', sans-serif;
 // contact part start =======================================>
 
 .main_about.main_contact{
-    background: url("https://i.ibb.co/VHdBShT/cerulean-blue-curve-frame-template-53876-99029.jpg") no-repeat center;
+    background: url("../images/contact.jpg") no-repeat center;
     background-size: cover;
 }
 
@@ -438,10 +485,45 @@ $ubuntu : 'ubuntu', sans-serif;
     height: 450px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    place-items: center;
 
     .contact_status{
-        width: 50%;
+        width:80%;
         height: 100%;
+
+        .contact_status_main{
+            width: 100%;
+            height: inherit;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin: auto 0;
+
+            h2{
+                font-size: 25px;
+            }
+
+            p{
+                margin: 15px 0;
+            }
+
+            .address_box{
+                display: flex;
+                align-items: center;
+
+                .address_icon{
+                    margin-right: 20px;
+                    font-size: 30px;
+                    color: rgb(219, 43, 57);
+                }
+
+                .address_body{
+                    h2{
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
     }
 
     .contact_form{
@@ -529,6 +611,583 @@ $ubuntu : 'ubuntu', sans-serif;
 
             span{
                 color: rgb(218, 33, 33);
+            }
+        }
+    }
+}
+
+// make responsive ---------------------------------------->
+
+@media (max-width: 1080px) {
+
+    // header part start ----------------->
+    .main_header{
+    
+        .child_header{
+    
+            #navigation{
+                padding: 10px 50px;
+    
+                .logo_div{
+                    .logo{
+                        font-size: 32px;
+                    }
+                }
+    
+                .menu{
+                    width: 50%;
+                    height: 100%;
+                }
+            }
+    
+            .header_content{
+                height: 100%;
+                padding: 0 40px;
+                margin-top: 80px;
+    
+                .header_mini_content{
+    
+                    h1{
+                        font-size: 45px;
+                    }
+    
+                    h4{
+                        font-size: 20px;
+                        letter-spacing: 3px;
+                    }
+    
+                    p{
+                        font-size: 30px;
+                        margin: 10px 0 30px 0;
+    
+                        span{
+                            font-size: 35px;
+                        }
+                    }
+    
+                    a{
+                        font-size: 20px;
+                    }
+                }
+                .header_mini_content2{
+                    width: 55%;
+                    height: inherit;
+                    text-align: center;
+    
+                    img{
+                        width: 100%;
+                        height: inherit;
+                    }
+                }
+            }
+        }
+    }
+
+    // about part -------------------------------->
+
+    .main_about,.main_project{
+
+        .child_about{
+            display: grid;
+            place-items: center;
+            box-sizing: border-box;
+    
+            .about_title{
+    
+                h2{
+                    font-size: 35px;
+                }
+            }
+    
+            .about_content{
+                .left_content{
+                    width: 50%;
+                    height: 100%;
+                    display: grid;
+                    place-items: center;
+    
+                    figure{
+                        width: 90%;
+                        height: 90%;
+    
+                        img{
+                            width: 90%;
+                            height: 90%;
+                        }
+                    }
+                }
+                
+                // Project part ------------------------>
+
+                .main_project{
+                    .Project_conents{
+                        height: 100%;
+                        padding: 50px 0px;
+                        display: grid;
+                        grid-template-columns: repeat(2 , 1fr);
+                        grid-gap: 20px;
+                        margin-bottom: 100px;
+
+                        .project_content{
+                            height: 600px;
+                            background-color: red;
+
+                            .Project_img{
+                                width: 80%;
+                                height: 400px;
+                                border-radius: 5px;
+                            }
+
+                            .project_body{
+                                margin-top: 10px;
+
+                                h2{
+                                    color: red;
+                                    font-size: 14px;
+                                }
+                                span{
+                                    margin: 5px 0;
+                                    display: block;
+                                    font-size: 10px;
+                                    color: gray;
+                                    font-family: $ubuntu;
+                                }
+
+                                p{
+                                    font-family: $ubuntu;
+                                    line-height: 20px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+// phone responsive ------------------------------ >
+
+@media (max-width: 912px) {
+
+    // header part start ----------------->
+    .main_header{
+    
+        .child_header{
+    
+            #navigation{
+    
+                .logo_div{
+                    .logo{
+                        font-size: 30px;
+                    }
+                }
+    
+                .menu{
+                    width: 50%;
+                    height: 100%;
+                    transition: all .4s linear;
+                    
+                    ul{
+                       display: none;
+    
+                        li{
+    
+                            a{
+    
+                                &::after{
+                                    display: none;
+                                    
+                                }
+    
+                                &:hover{
+                                    color: rgb(214, 25, 25);
+                                }
+                            }
+                        }
+                    }
+                }
+    
+                #toggle_btn{
+                    width: 50px;
+                    height: 50px;
+                    background-color: white;
+                    box-shadow: 4px 4px 28px -6px rgba(0,0,0,0.58);
+                    border-radius: 5px;
+                    display: block;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+                    overflow: hidden;
+                    cursor: pointer;
+
+                    .first_toggle{
+                        width: 35px;
+                        height: 4px;
+                        background: rgb(0, 153, 255);
+                        display: block;
+                        border-radius: 5px;
+                        transition: all .4s linear;
+                    }
+                    .third_toggle{
+                        width: 25px;
+                        height: 4px;
+                        background: rgb(0, 153, 255);
+                        display: block;
+                        border-radius: 5px;
+                        transition: all .4s linear;
+                    }
+                    .second_toggle{
+                        width: 15px;
+                        height: 4px;
+                        background: rgb(0, 153, 255);
+                        display: block;
+                        border-radius: 5px;
+                        margin: 3px 0;
+                        transition: all .2s linear;
+                    }
+
+                    &.active{
+
+                        .second_toggle{
+                            margin-left: 70px;
+                        }
+                        .first_toggle{
+                            background-color: rgb(218, 33, 33);
+                            transform: translateY(9px) rotate(45deg);
+                        }
+                        .third_toggle{
+                            width: 33px;
+                            background-color: rgb(218, 33, 33);
+                            transform: translateY(-5px) rotate(-50deg);
+                        }
+                    }
+                }
+    
+                // scroll toggle 
+                &.active{
+                    background: rgb(231, 28, 62);
+                    height: 70px;
+                    position: fixed;
+                    top: 0;
+                }
+            }
+    
+            .header_content{
+                height: 100%;
+                padding: 0 40px;
+                margin-top: 80px;
+                display: flex;
+                justify-content: center;
+    
+                .header_mini_content{
+                    width: 100%;
+    
+                    h1{
+                        font-size: 45px;
+                    }
+    
+                    h4{
+                        font-size: 20px;
+                        letter-spacing: 3px;
+                    }
+    
+                    p{
+                        font-size: 30px;
+                        margin: 10px 0 30px 0;
+    
+                        span{
+                            font-size: 35px;
+                        }
+                    }
+    
+                    a{
+                        font-size: 20px;
+                    }
+                }
+                .header_mini_content2{
+                    display: none;
+                }
+            }
+        }
+    }
+
+    // about part -------------------------------->
+
+    .main_about,.main_project{
+
+        .child_about{
+            display: grid;
+            place-items: center;
+            box-sizing: border-box;
+    
+            .about_title{
+    
+                h2{
+                    font-size: 35px;
+                }
+            }
+    
+            .about_content{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                .left_content{
+                    width: 80%;
+                    height: 100%;
+                    display: grid;
+                    place-items: center;
+    
+                    figure{
+                        width: 80%;
+                        height: 90%;
+    
+                        img{
+                            width: 90%;
+                            height: 90%;
+                        }
+                    }
+                }
+                .right_content{
+                    width: 80%;
+    
+                    h2{
+                        font-size: 25px;
+                        line-height: 40px;
+                        span{
+                            color: rgb(218, 33, 33);
+                            font-size: 30px;
+                            letter-spacing: 1px;
+                        }
+                    }
+    
+                    p{
+                        margin-top: 20px;
+                        line-height: 30px;
+                    }
+    
+                    button{
+                        padding: 10px 15px;
+                        border: 2px solid rgb(218, 33, 33);
+                        background: rgb(218, 33, 33);
+                        border-radius: 5px;
+                        margin-top: 20px;
+                        transition: all .4s linear;
+                        a{
+                            text-decoration: none;
+                            color: #fff;
+                            font-family: $ubuntu;
+                            font-size: 20px;
+                            font-weight: 500;
+    
+                            &:hover{
+                                color: rgb(218, 33, 33);
+                            }
+                        }
+                        &:hover{
+                            background: white;
+                            color: rgb(223, 29, 55);
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // Project part ------------------------>
+
+    .main_project{
+        margin: 100px 0;
+        height: 100vh;
+        margin-bottom: 90em;
+
+        .Project_conents{
+            height: 100vh;
+            padding: 50px 0px;
+            grid-gap: 20px;
+            grid-template-columns: 1fr;
+            margin-bottom: 100px;
+            text-align: center;
+
+            .project_content{
+                height: 600px;
+
+                .Project_img{
+                    width: 80%;
+                    height: 400px;
+                    border-radius: 5px;
+                }
+
+                .project_body{
+                    margin-top: 10px;
+
+                    h2{
+                        color: red;
+                        font-size: 14px;
+                    }
+                    span{
+                        margin: 5px 0;
+                        display: block;
+                        font-size: 10px;
+                        color: gray;
+                        font-family: $ubuntu;
+                    }
+
+                    p{
+                        font-family: $ubuntu;
+                        line-height: 20px;
+                    }
+                }
+            }
+        }
+    }
+
+    // contact form 
+
+    .main_about.main_contact{
+        background: white;
+    }
+    
+    .contact_body{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    
+        .contact_status{
+            width:80%;
+            height: 100%;
+            margin-top: 20px;
+    
+            .contact_status_main{
+                width: 100%;
+                height: inherit;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin: auto 0;
+    
+                h2{
+                    font-size: 25px;
+                }
+    
+                p{
+                    margin: 15px 0;
+                }
+    
+                .address_box{
+                    display: flex;
+                    align-items: center;
+    
+                    .address_icon{
+                        margin-right: 20px;
+                        font-size: 30px;
+                        color: rgb(219, 43, 57);
+                    }
+    
+                    .address_body{
+                        h2{
+                            font-size: 20px;
+                        }
+                    }
+                }
+            }
+        }
+    
+        .contact_form{
+            width: 50%;
+            height: 100%;
+            display: grid;
+            place-items: center;
+            text-align: center;
+    
+            form{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                margin-top: 50px;
+    
+                .form_title{
+                    font-size: 25px;
+                    margin-bottom: 15px;
+                }
+    
+                label{
+                    margin-bottom: 20px;
+                    display: flex;
+                    flex-direction: column;
+                    
+                    span{
+                        font-size: 20px;
+                    }
+    
+                    input{
+                        display: block;
+                        margin-top: 10px;
+                        padding: 8px 15px;
+                        border-radius: 5px;
+                        font-size: 14px;
+                        width: 250px;
+                    }
+    
+                    textarea{
+                        display: block;
+                        margin-top: 10px;
+                        width: 250px;
+                        height: 150px;
+                        border-radius: 5px;
+                        padding : 8px 15px;
+                        resize: none;
+                    }
+                }
+    
+                button{
+                    padding: 10px 15px;
+                    background: rgb(214, 25, 25);
+                    border: 2px solid rgb(218, 33, 33);
+                    font-size: 18px;
+                    color: #fff;
+                    font-weight: 500;
+                    font-family: $ubuntu;
+                    border-radius: 5px;
+                    transition: all .4s linear;
+    
+                    &:hover{
+                        color: rgb(218, 33, 33);
+                        background: #fff;
+                    }
+                }
+            }
+        }
+    }
+
+
+    // footer ----------->
+
+    .main_footer{
+        width: 100%;
+        height: auto;
+        margin-top: 400px;
+        
+        .child_footer{
+            background: black;
+            padding: 20px 0px;
+            text-align: center;
+    
+            p{
+                font-family: $ubuntu;
+                color: #fff;
+                font-size: 20px;
+    
+                span{
+                    color: rgb(218, 33, 33);
+                }
             }
         }
     }
